--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -9,8 +9,13 @@
 .home-content-top {
     font-size: 24px;
     font-family: "Regular";
-    margin-bottom: 16px;
+    /* margin-bottom: 16px; */
 }
 .home-content-bottom {
-    margin-top: 24px;
+    /* margin-top: 24px; */
+}
+
+.form {
+    /* 垂直居中 */
+    /* align-items: center; */
 }
