--- a/src/App.less
+++ b/src/App.less
@@ -6,3 +6,10 @@
   font-display: swap;
 }
 
+.title-badge {
+  position: fixed;
+  left: 91%;
+  .ant-badge-status-text {
+    color: rgba(0, 0, 0, 0.4) !important;
+  }
+}
