完成脚本详情

--- a/src/App.less
+++ b/src/App.less
@@ -8,7 +8,7 @@
 
 .title-badge {
   position: fixed;
-  left: 91%;
+  right: 12px;
   .ant-badge-status-text {
     color: rgba(0, 0, 0, 0.4) !important;
   }
